Calendar: Set overflow to auto. Fixes #516

--- a/calendar/css/style.css
+++ b/calendar/css/style.css
@@ -134,5 +134,5 @@ margin-bottom:4px;
 }
 
 #fullcalendar{
-	overflow: scroll;
+	overflow: auto;
 }
